# SimpleAI

./: .gitignore  Photo_be_ready.py  README.md  compose.yaml  data_loader.py  evaluation.py  execution.py  final_test.py  input.py  main.py  model.py  pipeline.py  pre_proc.py  pre_ready.py  trainer.py
modelAPI/: pyproject.toml
modelAPI/datarecord/: data_recorder.py  data_recorder_from_dir_with_id.py  data_recorder_from_id.py
modelAPI/labelclassify/: data_provider.py  data_provider_from_dir.py  exif_provider_from_dir.py  label_classifier.py  label_classifier_from_boundary.py  time_boundary.py
modelAPI/modelapi/: image_info_extractor.py  label_classifier_from_filename.py  modelapi.py  test.py
modelAPI/modelapi/dataprovide/: Image_data_provider_by_many_id_from_mysql.py  data_provder_by_many_id_from_mysql.py  data_provider.py  data_provider_by_id.py  data_provider_by_id_from_dir.py  data_provider_by_location.py  data_provider_by_many_id.py  datetime_provider_by_EXIF_from_dir.py  datetime_provider_by_image_location.py  exif_provider_by_id_from_dir.py  image_data_dto.py  image_provider_by_location.py
modelAPI/modelapi/datarecord/: data_recorder_from_dir_with_id.py  directory_recorder_from_dir_with_id.py  mysql_recorder_from_dir_with_id.py  preprocess_25k_dir.py  split_dir_by_label.py
modelAPI/modelapi/labelclassify/: data_provider.py  data_provider_from_dir.py  label_classifier_from_boundary.py
modelAPI/modelapi/propertise/: propertise_loader.py
modelAPI/modelapi/repository/: database_manager.py
modelAPI/modelapi/repository/dataset/: data_dto.py  (+2 more)
src/: fit.py  (+10 more)
(+31 files in other folders)
