[tool.poetry]
name = "modelapi"
version = "0.1.0"
description = ""
authors = ["Lee Junhee <junhee0110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.0"
pyyaml = "^6.0.1"
chardet = "^5.2.0"
pymysql = "^1.1.0"
cryptography = "^41.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
